zetasql/parser/testdata/system_variables.test
# More system variable tests are in parameters.test

select @@foo.bar.baz;
--
QueryStatement [0-20] [select @@foo.bar.baz]
  Query [0-20] [select @@foo.bar.baz]
    Select [0-20] [select @@foo.bar.baz]
      SelectList [7-20] [@@foo.bar.baz]
        SelectColumn [7-20] [@@foo.bar.baz]
          SystemVariableExpr [7-20] [@@foo.bar.baz]
            PathExpression [9-20] [foo.bar.baz]
              Identifier(foo) [9-12] [foo]
              Identifier(bar) [13-16] [bar]
              Identifier(baz) [17-20] [baz]
--
SELECT
  @@foo.bar.baz
==

select (@@foo.bar).baz;
--
QueryStatement [0-22] [select (@@foo.bar).baz]
  Query [0-22] [select (@@foo.bar).baz]
    Select [0-22] [select (@@foo.bar).baz]
      SelectList [7-22] [(@@foo.bar).baz]
        SelectColumn [7-22] [(@@foo.bar).baz]
          DotIdentifier [7-22] [(@@foo.bar).baz]
            SystemVariableExpr [8-17] [@@foo.bar]
              PathExpression [10-17] [foo.bar]
                Identifier(foo) [10-13] [foo]
                Identifier(bar) [14-17] [bar]
            Identifier(baz) [19-22] [baz]
--
SELECT
  (@@foo.bar).baz
==

select foo.@@bar.baz;
--
ERROR: Syntax error: Unexpected "@@" [at 1:12]
select foo.@@bar.baz;
           ^
==

select @@foo[DEFAULT_OFFSET(0)]
--
QueryStatement [0-31] [select @@foo...AULT_OFFSET(0)]]
  Query [0-31] [select @@foo...AULT_OFFSET(0)]]
    Select [0-31] [select @@foo...AULT_OFFSET(0)]]
      SelectList [7-31] [@@foo[DEFAULT_OFFSET(0)]]
        SelectColumn [7-31] [@@foo[DEFAULT_OFFSET(0)]]
          ArrayElement [7-31] [@@foo[DEFAULT_OFFSET(0)]]
            SystemVariableExpr [7-12] [@@foo]
              PathExpression [9-12] [foo]
                Identifier(foo) [9-12] [foo]
            Location [12-13] [[]
            FunctionCall [13-30] [DEFAULT_OFFSET(0)]
              PathExpression [13-27] [DEFAULT_OFFSET]
                Identifier(DEFAULT_OFFSET) [13-27] [DEFAULT_OFFSET]
              IntLiteral(0) [28-29] [0]
--

SELECT
  @@foo[DEFAULT_OFFSET(0)]

